Added links to github source code and netlify

--- a/index.html
+++ b/index.html
@@ -359,7 +359,20 @@ https://www.tripadvisor.com/Restaurant_Review-g264369-d2651309-Reviews-La_Cambij
         </p>
         <p class="pc-signature">&#8209; Porto Caribe &copy;</p>
         <div id="coder">
-          Coded by | <span id="coder-name">aileen chan miranda</span>
+          Open-source code by
+          <a
+            href="https://github.com/aileenchany/porto-caribe-project"
+            target="_blank"
+            id="coder-name"
+            >ACM</a
+          >
+          | Hosted on
+          <a
+            href="https://wonderful-lovelace-54f247.netlify.app/"
+            target="_blank"
+            id="netlify-link"
+            >Netlify</a
+          >
         </div>
       </div>
 
